src/main/java/de/appdynamics/ace/metric/query/MetricQueryParser.java
// Generated from /vlab/development/github/RestMetricQueries/src/main/antlr/MetricQuery.g4 by ANTLR 4.3
package de.appdynamics.ace.metric.query;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MetricQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__9=1, T__8=2, T__7=3, T__6=4, T__5=5, T__4=6, T__3=7, T__2=8, T__1=9, 
		T__0=10, NUMBER_NO_LEADING_ZEROS=11, TIME_UNIT=12, ANSIDATE=13, ANSITIME=14, 
		TIMEZONE=15, EXPORT=16, METRIC=17, AGGREGATED=18, FROM=19, ON=20, WS=21, 
		COMMA=22, STAR=23, PLAINSTRING=24, APPLICATION=25, ID=26;
	public static final String[] tokenNames = {
		"<INVALID>", "'ago'", "'as'", "'''", "'\\'", "'ending'", "'at'", "'.'", 
		"'for'", "'starting'", "'\"'", "NUMBER_NO_LEADING_ZEROS", "TIME_UNIT", 
		"ANSIDATE", "ANSITIME", "TIMEZONE", "EXPORT", "METRIC", "'aggregated'", 
		"'from'", "'on'", "WS", "','", "'*'", "PLAINSTRING", "APPLICATION", "ID"
	};
	public static final int
		RULE_query = 0, RULE_exportStatement = 1, RULE_timeStatement = 2, RULE_timeShiftingStatement = 3, 
		RULE_fieldList = 4, RULE_anyField = 5, RULE_metriclist = 6, RULE_metric = 7, 
		RULE_metricname = 8, RULE_pathSelection = 9, RULE_pathElements = 10, RULE_pathElement = 11, 
		RULE_elementName = 12, RULE_pathElementName = 13, RULE_anyElement = 14, 
		RULE_componentSelection = 15, RULE_componentIdentifier = 16, RULE_ansiDate = 17;
	public static final String[] ruleNames = {
		"query", "exportStatement", "timeStatement", "timeShiftingStatement", 
		"fieldList", "anyField", "metriclist", "metric", "metricname", "pathSelection", 
		"pathElements", "pathElement", "elementName", "pathElementName", "anyElement", 
		"componentSelection", "componentIdentifier", "ansiDate"
	};

	@Override
	public String getGrammarFileName() { return "MetricQuery.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MetricQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public TerminalNode AGGREGATED() { return getToken(MetricQueryParser.AGGREGATED, 0); }
		public TerminalNode EOF() { return getToken(MetricQueryParser.EOF, 0); }
		public ExportStatementContext exportStatement() {
			return getRuleContext(ExportStatementContext.class,0);
		}
		public TerminalNode METRIC() { return getToken(MetricQueryParser.METRIC, 0); }
		public TerminalNode EXPORT() { return getToken(MetricQueryParser.EXPORT, 0); }
		public TimeStatementContext timeStatement() {
			return getRuleContext(TimeStatementContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); match(EXPORT);
			setState(38);
			_la = _input.LA(1);
			if (_la==METRIC) {
				{
				setState(37); match(METRIC);
				}
			}

			setState(41);
			_la = _input.LA(1);
			if (_la==AGGREGATED) {
				{
				setState(40); match(AGGREGATED);
				}
			}

			setState(43); exportStatement();
			setState(45);
			_la = _input.LA(1);
			if (_la==T__2 || _la==T__1) {
				{
				setState(44); timeStatement();
				}
			}

			setState(47); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExportStatementContext extends ParserRuleContext {
		public TerminalNode ON() { return getToken(MetricQueryParser.ON, 0); }
		public PathSelectionContext pathSelection() {
			return getRuleContext(PathSelectionContext.class,0);
		}
		public ComponentSelectionContext componentSelection() {
			return getRuleContext(ComponentSelectionContext.class,0);
		}
		public FieldListContext fieldList() {
			return getRuleContext(FieldListContext.class,0);
		}
		public TerminalNode FROM() { return getToken(MetricQueryParser.FROM, 0); }
		public ExportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exportStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterExportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitExportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitExportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExportStatementContext exportStatement() throws RecognitionException {
		ExportStatementContext _localctx = new ExportStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exportStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); fieldList();
			setState(50); match(FROM);
			setState(51); pathSelection();
			setState(52); match(ON);
			setState(53); componentSelection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeStatementContext extends ParserRuleContext {
		public TimeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timeStatement; }
	 
		public TimeStatementContext() { }
		public void copyFrom(TimeStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RelativeTimerangeContext extends TimeStatementContext {
		public TimeShiftingStatementContext timeShiftingStatement() {
			return getRuleContext(TimeShiftingStatementContext.class,0);
		}
		public TerminalNode NUMBER_NO_LEADING_ZEROS() { return getToken(MetricQueryParser.NUMBER_NO_LEADING_ZEROS, 0); }
		public TerminalNode TIME_UNIT() { return getToken(MetricQueryParser.TIME_UNIT, 0); }
		public RelativeTimerangeContext(TimeStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterRelativeTimerange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitRelativeTimerange(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitRelativeTimerange(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AbsoluteTimerangeContext extends TimeStatementContext {
		public List<AnsiDateContext> ansiDate() {
			return getRuleContexts(AnsiDateContext.class);
		}
		public AnsiDateContext ansiDate(int i) {
			return getRuleContext(AnsiDateContext.class,i);
		}
		public AbsoluteTimerangeContext(TimeStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterAbsoluteTimerange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitAbsoluteTimerange(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitAbsoluteTimerange(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeStatementContext timeStatement() throws RecognitionException {
		TimeStatementContext _localctx = new TimeStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_timeStatement);
		int _la;
		try {
			setState(66);
			switch (_input.LA(1)) {
			case T__2:
				_localctx = new RelativeTimerangeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(55); match(T__2);
				setState(56); match(NUMBER_NO_LEADING_ZEROS);
				setState(57); match(TIME_UNIT);
				setState(59);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__1) | (1L << NUMBER_NO_LEADING_ZEROS))) != 0)) {
					{
					setState(58); timeShiftingStatement();
					}
				}

				}
				break;
			case T__1:
				_localctx = new AbsoluteTimerangeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(61); match(T__1);
				setState(62); ansiDate();
				setState(63); match(T__5);
				setState(64); ansiDate();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeShiftingStatementContext extends ParserRuleContext {
		public int value;
		public TimeShiftingStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timeShiftingStatement; }
	 
		public TimeShiftingStatementContext() { }
		public void copyFrom(TimeShiftingStatementContext ctx) {
			super.copyFrom(ctx);
			this.value = ctx.value;
		}
	}
	public static class RelativeTimerangeOffsetContext extends TimeShiftingStatementContext {
		public TerminalNode NUMBER_NO_LEADING_ZEROS() { return getToken(MetricQueryParser.NUMBER_NO_LEADING_ZEROS, 0); }
		public TerminalNode TIME_UNIT() { return getToken(MetricQueryParser.TIME_UNIT, 0); }
		public RelativeTimerangeOffsetContext(TimeShiftingStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterRelativeTimerangeOffset(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitRelativeTimerangeOffset(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitRelativeTimerangeOffset(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AbsoluteTimerangeOffsetContext extends TimeShiftingStatementContext {
		public AnsiDateContext ansiDate() {
			return getRuleContext(AnsiDateContext.class,0);
		}
		public AbsoluteTimerangeOffsetContext(TimeShiftingStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterAbsoluteTimerangeOffset(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitAbsoluteTimerangeOffset(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitAbsoluteTimerangeOffset(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeShiftingStatementContext timeShiftingStatement() throws RecognitionException {
		TimeShiftingStatementContext _localctx = new TimeShiftingStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_timeShiftingStatement);
		int _la;
		try {
			setState(84);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new AbsoluteTimerangeOffsetContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(68); match(T__1);
				setState(69); match(T__4);
				setState(70); ansiDate();
				}
				break;

			case 2:
				_localctx = new AbsoluteTimerangeOffsetContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(71); match(T__5);
				setState(72); match(T__4);
				setState(73); ansiDate();
				}
				break;

			case 3:
				_localctx = new RelativeTimerangeOffsetContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(74); match(T__1);
				setState(75); match(NUMBER_NO_LEADING_ZEROS);
				setState(76); match(TIME_UNIT);
				setState(77); match(T__9);
				}
				break;

			case 4:
				_localctx = new RelativeTimerangeOffsetContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(78); match(T__5);
					}
				}

				setState(81); match(NUMBER_NO_LEADING_ZEROS);
				setState(82); match(TIME_UNIT);
				setState(83); match(T__9);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldListContext extends ParserRuleContext {
		public AnyFieldContext anyField() {
			return getRuleContext(AnyFieldContext.class,0);
		}
		public MetriclistContext metriclist() {
			return getRuleContext(MetriclistContext.class,0);
		}
		public FieldListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterFieldList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitFieldList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitFieldList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldListContext fieldList() throws RecognitionException {
		FieldListContext _localctx = new FieldListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fieldList);
		try {
			setState(88);
			switch (_input.LA(1)) {
			case STAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(86); anyField();
				}
				break;
			case T__7:
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(87); metriclist();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnyFieldContext extends ParserRuleContext {
		public TerminalNode STAR() { return getToken(MetricQueryParser.STAR, 0); }
		public AnyFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterAnyField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitAnyField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitAnyField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnyFieldContext anyField() throws RecognitionException {
		AnyFieldContext _localctx = new AnyFieldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_anyField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90); match(STAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MetriclistContext extends ParserRuleContext {
		public MetricContext metric(int i) {
			return getRuleContext(MetricContext.class,i);
		}
		public List<MetricContext> metric() {
			return getRuleContexts(MetricContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(MetricQueryParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MetricQueryParser.COMMA, i);
		}
		public MetriclistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metriclist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterMetriclist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitMetriclist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitMetriclist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetriclistContext metriclist() throws RecognitionException {
		MetriclistContext _localctx = new MetriclistContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_metriclist);
		int _la;
		try {
			setState(100);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92); metric();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93); metric();
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(94); match(COMMA);
					setState(95); metric();
					}
					}
					setState(98); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==COMMA );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MetricContext extends ParserRuleContext {
		public String metricName;
		public MetricnameContext metricname;
		public PathElementNameContext pathElementName() {
			return getRuleContext(PathElementNameContext.class,0);
		}
		public MetricnameContext metricname() {
			return getRuleContext(MetricnameContext.class,0);
		}
		public MetricContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metric; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterMetric(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitMetric(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitMetric(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetricContext metric() throws RecognitionException {
		MetricContext _localctx = new MetricContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_metric);
		int _la;
		try {
			setState(120);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(102); match(T__0);
				setState(103); ((MetricContext)_localctx).metricname = metricname();
				setState(104); match(T__0);
				setState(107);
				_la = _input.LA(1);
				if (_la==T__8) {
					{
					setState(105); match(T__8);
					setState(106); pathElementName();
					}
				}

				((MetricContext)_localctx).metricName =  (((MetricContext)_localctx).metricname!=null?_input.getText(((MetricContext)_localctx).metricname.start,((MetricContext)_localctx).metricname.stop):null);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(111); match(T__7);
				setState(112); ((MetricContext)_localctx).metricname = metricname();
				setState(113); match(T__7);
				setState(116);
				_la = _input.LA(1);
				if (_la==T__8) {
					{
					setState(114); match(T__8);
					setState(115); pathElementName();
					}
				}

				((MetricContext)_localctx).metricName =  (((MetricContext)_localctx).metricname!=null?_input.getText(((MetricContext)_localctx).metricname.start,((MetricContext)_localctx).metricname.stop):null);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MetricnameContext extends ParserRuleContext {
		public MetricnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metricname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterMetricname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitMetricname(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitMetricname(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetricnameContext metricname() throws RecognitionException {
		MetricnameContext _localctx = new MetricnameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_metricname);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(122);
				_la = _input.LA(1);
				if ( _la <= 0 || ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__6) | (1L << T__0))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__8) | (1L << T__5) | (1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << NUMBER_NO_LEADING_ZEROS) | (1L << TIME_UNIT) | (1L << ANSIDATE) | (1L << ANSITIME) | (1L << TIMEZONE) | (1L << EXPORT) | (1L << METRIC) | (1L << AGGREGATED) | (1L << FROM) | (1L << ON) | (1L << WS) | (1L << COMMA) | (1L << STAR) | (1L << PLAINSTRING) | (1L << APPLICATION) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PathSelectionContext extends ParserRuleContext {
		public PathElementsContext pathElements() {
			return getRuleContext(PathElementsContext.class,0);
		}
		public PathSelectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pathSelection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterPathSelection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitPathSelection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitPathSelection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PathSelectionContext pathSelection() throws RecognitionException {
		PathSelectionContext _localctx = new PathSelectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_pathSelection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); pathElements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PathElementsContext extends ParserRuleContext {
		public PathElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pathElements; }
	 
		public PathElementsContext() { }
		public void copyFrom(PathElementsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DottedPathElementsContext extends PathElementsContext {
		public PathElementContext pathElement(int i) {
			return getRuleContext(PathElementContext.class,i);
		}
		public List<PathElementContext> pathElement() {
			return getRuleContexts(PathElementContext.class);
		}
		public DottedPathElementsContext(PathElementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).enterDottedPathElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricQueryListener ) ((MetricQueryListener)listener).exitDottedPathElements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricQueryVisitor ) return ((MetricQueryVisitor<? extends T>)visitor).visitDottedPathElements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PathElementsContext pathElements() throws RecognitionException {
		PathElementsContext _localctx = new PathElementsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pathElements);
		int _la;
		try {
			_localctx = new DottedPathElementsContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(129); pathElement();
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(130); match(T__3);
				setState(131); pathElement();
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
